# nyuntam

./: .gitignore  .gitmodules  MANIFEST.in  README.md  README_NYUNTAM.md  __init__.py  algorithm.py  build.sh  commands.py  contributions.md  factory.py  main.py  pyproject.toml  remove_fx_quant.yaml  run_dist.py  settings.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
cli/: __init__.py  cli.py  docs.py
cli/core/: constants.py  extension.py  logger.py  models.py  utils.py  workspace.py
constants/: keys.py
examples/: readme.md
examples/adapt/image_segmentation/: README.md  config.yaml
examples/adapt/object_detection/: README.md  config.yaml
examples/adapt/summarization/: README.md
examples/adapt/text_generation/: README.md
examples/experimentals/voice_engine/: main.py  main_android.py  main_android_continous.py  performance.py  readme.md  receive_audio.py  run_on_android.md  tts-blog.md
examples/text-generation/aqlm_quantization/: create_dataset.py  evaluate.py  readme.md
nyun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nyuntam/: commands.py  main.py  setup.py
nyuntam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
nyuntam/examples/: readme.md
nyuntam/text_generation/: .gitmodules  README.md  __init__.py  main.py  requirements.txt  utils.py
nyuntam/utils/: _backports.py  config.py  device.py  dtype.py  logger.py
tests/: aqlm_test.yaml  awq_test.yaml  flap_test.yaml  smolvlm_test.yaml
utils/: _backports.py  config.py  logger.py  vision_utils.py
(+74 files in other folders)
